// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enableCardGenerator V4 LROP with CLI 3.0 1`] = `
"{
  \\"name\\": \\"apps.v4.example\\",
  \\"version\\": \\"0.0.1\\",
  \\"private\\": true,
  \\"sapux\\": true,
  \\"description\\": \\"My LROP V4 Application\\",
  \\"scripts\\": {
    \\"build\\": \\"ui5 build\\",
    \\"start\\": \\"ui5 serve --open \\\\\\"/test/flpSandbox.html#app-preview\\\\\\"\\",
    \\"start-cards-generator\\": \\"ui5 serve --open 'test/flpGeneratorSandboxTest.html#app-preview'\\"
  },
  \\"devDependencies\\": {
    \\"@ui5/cli\\": \\"3.9.0\\",
    \\"@sap/ux-ui5-tooling\\": \\"1\\",
    \\"@sap-ux/ui5-middleware-fe-mockserver\\": \\"2.2.19\\",
    \\"@sap-ux/preview-middleware\\": \\"0.11.26\\"
  }
}
"
`;

exports[`enableCardGenerator V4 LROP with CLI 3.0 2`] = `
"specVersion: \\"2.4\\"
metadata:
  name: apps.v4.example
type: application
server:
  customMiddleware:
    - name: preview-middleware
      afterMiddleware: compression
      configuration:
        flp:
          path: test/flpSandbox.html
        editors:
          cardGenerator:
            path: test/flpGeneratorSandboxTest.html
    - name: sap-fe-mockserver
      afterMiddleware: compression
      configuration:
        services:
          - urlPath: '/sap/opu/odata4/mock'
            metadataPath: './webapp/localService/metadata.xml'
            generateMockData: true
    - name: fiori-tools-proxy
      afterMiddleware: sap-fe-mockserver
      configuration:
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
"
`;

exports[`enableCardGenerator Valid LROP 1`] = `
"{
  \\"scripts\\": {
    \\"start-cards-generator\\": \\"ui5 serve --open 'test/flpCardGeneratorSandbox.html#app-preview'\\"
  }
}
"
`;

exports[`enableCardGenerator Valid LROP 2`] = `
"server:
  customMiddleware:
    - name: preview-middleware
      afterMiddleware: compression
      configuration:
        editors:
          cardGenerator:
            path: test/flpCardGeneratorSandbox.html
"
`;

exports[`enableCardGenerator Valid LROP without cardGenerator config 1`] = `
"{
  \\"name\\": \\"apps.v4.example\\",
  \\"version\\": \\"0.0.1\\",
  \\"private\\": true,
  \\"sapux\\": true,
  \\"description\\": \\"My LROP V4 Application\\",
  \\"scripts\\": {
    \\"build\\": \\"ui5 build\\",
    \\"start\\": \\"ui5 serve --open \\\\\\"/test/flpSandbox.html#app-preview\\\\\\"\\",
    \\"start-cards-generator\\": \\"ui5 serve --open 'test/flpCardGeneratorSandbox.html#app-preview'\\"
  },
  \\"devDependencies\\": {
    \\"@ui5/cli\\": \\"3.9.0\\",
    \\"@sap/ux-ui5-tooling\\": \\"1\\",
    \\"@sap-ux/ui5-middleware-fe-mockserver\\": \\"2.2.19\\",
    \\"@sap-ux/preview-middleware\\": \\"0.11.26\\"
  }
}
"
`;

exports[`enableCardGenerator Valid LROP without cardGenerator config 2`] = `
"specVersion: \\"2.4\\"
metadata:
  name: apps.v4.example
type: application
server:
  customMiddleware:
    - name: preview-middleware
      afterMiddleware: compression
      configuration:
        flp:
          path: test/flpSandbox.html
        editors:
          cardGenerator:
            path: test/flpCardGeneratorSandbox.html
    - name: sap-fe-mockserver
      afterMiddleware: compression
      configuration:
        services:
          - urlPath: '/sap/opu/odata4/mock'
            metadataPath: './webapp/localService/metadata.xml'
            generateMockData: true
    - name: fiori-tools-proxy
      afterMiddleware: sap-fe-mockserver
      configuration:
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
"
`;
